Domain-04-Linux-Administration/DeploymentPackages/main.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Linux Administration Lab - CentOS/Ubuntu VM with LVM, Pacemaker, SELinux",
  "Parameters": {
    "InstanceType": {
      "Type": "String",
      "Default": "t3.large",
      "Description": "EC2 Instance Type"
    }
  },
  "Resources": {
    "SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Linux Admin Lab Security Group",
        "SecurityGroupIngress": [
          {"IpProtocol": "tcp", "FromPort": 22, "ToPort": 22, "CidrIp": "0.0.0.0/0"},
          {"IpProtocol": "tcp", "FromPort": 80, "ToPort": 80, "CidrIp": "0.0.0.0/0"},
          {"IpProtocol": "tcp", "FromPort": 443, "ToPort": 443, "CidrIp": "0.0.0.0/0"}
        ]
      }
    }
  }
}
